control/plasma_cf90.F90


      interface
         function PLASMA_chegvd_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='PLASMA_chegvd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_chegvd_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
          end function PLASMA_chegvd_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_chemm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_chemm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_chemm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            complex(kind=c_float_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_float_complex), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_chemm_Tile_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_cher2k_Tile_c(uplo,trans,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_cher2k_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cher2k_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            complex(kind=c_float_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_cher2k_Tile_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_cherk_Tile_c(uplo,trans,alpha,A,beta,C) &
          & bind(c, name='PLASMA_cherk_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cherk_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_cherk_Tile_c
      end interface
#endif

      interface
         function PLASMA_chetrd_Tile_c(jobz,uplo,A,D,E,T,Q,LDQ) &
          & bind(c, name='PLASMA_chetrd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_chetrd_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_chetrd_Tile_c
      end interface

      interface
         function PLASMA_clacpy_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_clacpy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_clacpy_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_clacpy_Tile_c
      end interface

      interface
         function PLASMA_clange_Tile_c(norm,A) &
          & bind(c, name='PLASMA_clange_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_clange_Tile_c
            integer(kind=c_int), value :: norm
            type(c_ptr), value :: A
          end function PLASMA_clange_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_clanhe_Tile_c(norm,uplo,A) &
          & bind(c, name='PLASMA_clanhe_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_clanhe_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_clanhe_Tile_c
      end interface
#endif

      interface
         function PLASMA_clansy_Tile_c(norm,uplo,A) &
          & bind(c, name='PLASMA_clansy_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_clansy_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_clansy_Tile_c
      end interface

      interface
         function PLASMA_clantr_Tile_c(norm,uplo,diag,A) &
          & bind(c, name='PLASMA_clantr_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_clantr_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: diag
            type(c_ptr), value :: A
          end function PLASMA_clantr_Tile_c
      end interface

      interface
         function PLASMA_claset_Tile_c(uplo,alpha,beta,A) &
          & bind(c, name='PLASMA_claset_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_claset_Tile_c
            integer(kind=c_int), value :: uplo
            complex(kind=c_float_complex), value :: alpha
            complex(kind=c_float_complex), value :: beta
            type(c_ptr), value :: A
          end function PLASMA_claset_Tile_c
      end interface

      interface
         function PLASMA_claswp_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_claswp_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_claswp_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_claswp_Tile_c
      end interface

      interface
         function PLASMA_claswpc_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_claswpc_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_claswpc_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_claswpc_Tile_c
      end interface

      interface
         function PLASMA_clauum_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_clauum_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_clauum_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_clauum_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_cplghe_Tile_c(bump,A,seed) &
          & bind(c, name='PLASMA_cplghe_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cplghe_Tile_c
            real(kind=c_float), value :: bump
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_cplghe_Tile_c
      end interface
#endif

      interface
         function PLASMA_cplgsy_Tile_c(bump,A,seed) &
          & bind(c, name='PLASMA_cplgsy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cplgsy_Tile_c
            complex(kind=c_float_complex), value :: bump
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_cplgsy_Tile_c
      end interface

      interface
         function PLASMA_cplrnt_Tile_c(A,seed) &
          & bind(c, name='PLASMA_cplrnt_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cplrnt_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_cplrnt_Tile_c
      end interface

      interface
         function PLASMA_cpltmg_Tile_c(mtxtype,A,seed) &
          & bind(c, name='PLASMA_cpltmg_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cpltmg_Tile_c
            integer(kind=c_int), value :: mtxtype
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_cpltmg_Tile_c
      end interface

      interface
         function PLASMA_cpocon_Tile_c(uplo,A,anorm,rcond) &
          & bind(c, name='PLASMA_cpocon_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cpocon_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            real(kind=c_float), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_cpocon_Tile_c
      end interface

      interface
         function PLASMA_cposv_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_cposv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cposv_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_cposv_Tile_c
      end interface

      interface
         function PLASMA_cpotrf_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_cpotrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cpotrf_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_cpotrf_Tile_c
      end interface

      interface
         function PLASMA_cpotri_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_cpotri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cpotri_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_cpotri_Tile_c
      end interface

      interface
         function PLASMA_cpotrs_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_cpotrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cpotrs_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_cpotrs_Tile_c
      end interface

      interface
         function PLASMA_csymm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_csymm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_csymm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            complex(kind=c_float_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_float_complex), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_csymm_Tile_c
      end interface
